# agent-test

./: CHANGELOG.md  agent-test.cabal
app/: Main.hs
src/: Program.hs
src/Data/: EmbeddingVector.hs
src/Domain/: BigFive.hs  Memory.hs  Person.hs
src/Effect/: Console.hs  LLM.hs
